--- a/mocks.html
+++ b/mocks.html
@@ -228,7 +228,7 @@
             <!-- Review Notes -->
             <div class="col-md-4">
               <label for="review" class="col-form-label">Review</label>
-              <textarea class="form-control" id="review" name="review" rows="1" style="width:100%;" placeholder="Why did you make those mistakes, etc..."></textarea>
+              <textarea class="form-control review-clickable" id="review" name="review" rows="1" style="width:100%; height:2rem; resize:none;" placeholder="Click to add detailed review..."></textarea>
             </div>
             <!-- Submit -->
             <div class="col-auto">
@@ -679,18 +679,33 @@
 
     // Remove auto-resize for form review textarea
 
-    // --- SimpleMDE Markdown Editor integration ---
-    let simplemde;
-    document.addEventListener('DOMContentLoaded', () => {
-      const reviewEl = document.getElementById('review');
-      if (reviewEl) {
-        simplemde = new SimpleMDE({
-          element: reviewEl,
-          spellChecker: false,
-          status: false,
-          toolbar: ["bold", "italic", "heading", "|", "quote", "unordered-list", "ordered-list", "|", "preview", "guide"]
-        });
-      }
+    // --- Overlay markdown editor for form Review ---
+    import SimpleMDE from 'https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js';
+    let overlayMDE;
+    document.querySelectorAll('.review-clickable').forEach(el => {
+      el.addEventListener('click', () => {
+        const overlay = document.getElementById('noteOverlay');
+        const editorEl = document.getElementById('overlayReviewEditor');
+        editorEl.value = el.value;
+        overlay.style.display = 'flex';
+        // Initialize SimpleMDE if not created
+        if (!overlayMDE) {
+          overlayMDE = new SimpleMDE({
+            element: editorEl,
+            autofocus: true,
+            spellChecker: false,
+            toolbar: ["bold","italic","heading","|","quote","unordered-list","ordered-list","|","preview","guide"]
+          });
+        } else {
+          overlayMDE.value(el.value);
+        }
+      });
+    });
+    // Save and close
+    document.getElementById('noteSave').addEventListener('click', () => {
+      const editorVal = overlayMDE.value();
+      document.getElementById('review').value = editorVal;
+      document.getElementById('noteOverlay').style.display = 'none';
     });
   </script>
 </div>
@@ -700,7 +715,8 @@
 <div id="noteOverlay">
   <div class="sticky-note">
     <button id="noteClose" class="btn-close position-absolute top-0 end-0 m-2" aria-label="Close"></button>
-    <div id="noteContent" style="white-space: pre-wrap;"></div>
+    <button id="noteSave" class="btn btn-sm btn-primary position-absolute top-0 start-0 m-2">Save</button>
+    <textarea id="overlayReviewEditor" style="width:100%;height:70vh;"></textarea>
   </div>
 </div>
 <script>
