--- a/mocks.html
+++ b/mocks.html
@@ -223,7 +223,7 @@
             <!-- Review Notes -->
             <div class="col-md-4">
               <label for="review" class="col-form-label">Review</label>
-              <textarea class="form-control review-clickable" id="review" name="review" rows="1" style="width:100%; height:2rem; resize:none;" placeholder="Click to add detailed review..."></textarea>
+              <textarea class="form-control review-clickable" id="review" name="review" rows="1" style="width:100%; height:2rem; resize:none;" placeholder="Why did you make those mistakes, etc..."></textarea>
             </div>
             <!-- Submit -->
             <div class="col-auto">
