--- a/mocks.html
+++ b/mocks.html
@@ -215,7 +215,7 @@
             <div class="col-auto">
               <label for="scoreTotal" class="col-form-label">Total Score</label>
               <div class="d-flex align-items-center">
-                <input type="number" readonly class="form-control-plaintext" id="scoreTotal" name="scoreTotal" style="width:100px;" value="0">
+                <input type="number" readonly class="form-control-plaintext" id="scoreTotal" name="scoreTotal" style="width:100px;" placeholder="Out of 2700">
                 <span id="percTotal" class="ms-2"></span>
               </div>
             </div>
@@ -225,7 +225,7 @@
               <textarea class="form-control review-clickable" id="review" name="review" rows="1" style="width:150%; height:2rem; resize:none;" placeholder="Why did you make those mistakes, etc..."></textarea>
             </div>
             <!-- Submit -->
-            <div class="col-auto">
+            <div class="col-auto ms-auto">
               <button type="submit" class="btn btn-primary">Submit Score</button>
             </div>
           </div>
