--- a/mocks.html
+++ b/mocks.html
@@ -225,7 +225,7 @@
               <textarea class="form-control review-clickable" id="review" name="review" rows="1" style="width:220%; height:2rem; resize:none;" placeholder="Why did you make those mistakes, etc..."></textarea>
             </div>
             <!-- Submit -->
-            <div class="col-auto">
+            <div class="col-auto ms-auto">
               <button type="submit" class="btn btn-primary">Submit Score</button>
             </div>
           </div>
