--- a/mocks.html
+++ b/mocks.html
@@ -88,6 +88,10 @@
       max-width: none !important;
       max-height: none !important;
     }
+    /* Adjust the Submit Score button position by editing margin-left below */
+    #submitContainer {
+      margin-left: 50px; /* moves the Submit Score button 50px to the right */
+    }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
@@ -225,7 +229,7 @@
               <textarea class="form-control review-clickable" id="review" name="review" rows="1" style="width:220%; height:2rem; resize:none;" placeholder="Why did you make those mistakes, etc..."></textarea>
             </div>
             <!-- Submit -->
-            <div class="col-auto ms-auto">
+            <div id="submitContainer" class="col-auto">
               <button type="submit" class="btn btn-primary">Submit Score</button>
             </div>
           </div>
