--- a/mocks.html
+++ b/mocks.html
@@ -735,7 +735,7 @@
 <div id="noteOverlay">
   <div class="sticky-note" style="min-width:300px; min-height:120px;">
     <button id="noteClose" class="btn-close position-absolute top-0 end-0 m-2" aria-label="Close"></button>
-    <div id="noteContent" style="white-space: pre-wrap; margin-top:2.5rem; min-height:70px;"></div>
+    <div id="noteContent" contenteditable="true" style="white-space: pre-wrap; margin-top:2.5rem; min-height:70px; outline:none;"></div>
   </div>
 </div>
 <script>
